// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gifs App
  </h2>
  <AddCategory
    propiedad={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifApp /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    Gifs App
  </h2>
  <AddCategory
    propiedad={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
